--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   border: 0px;
   border-radius: 10px;
   padding: 20px;
+  margin-top: 20px;
 }
 
 .weather-forecast-section {
@@ -18,6 +19,10 @@
   padding: 20px;
 }
 
+.current-temperature {
+  font-size: 35px;
+  font-weight: 500;
+}
 h1 {
   font-size: 50px;
   font-weight: 700px;
@@ -31,7 +36,6 @@ li {
   list-style: none;
   display: block;
   font-size: 13px;
-  text-align: left;
   margin: 0;
   padding: 0;
 }
