Fixed 'Current Location' error & width of weather forecast section

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@
   background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   border: 0px;
   border-radius: 10px;
-  margin: 20px;
+  margin: 20px 0;
   padding: 20px;
 }
 
