Deleted low-high for current weather & color of °F & °C

--- a/src/style.css
+++ b/src/style.css
@@ -42,10 +42,14 @@
 
 .celcius {
   text-decoration: none;
+  color: rgb(94, 94, 126);
 }
+
 .fahrenheit {
   text-decoration: none;
+  color: rgb(94, 94, 126);
 }
+
 .active {
   color: black;
   cursor: default;
